@@ -583,6 +583,8 @@ F:LOG:SYSTEM:LEVEL:CRIT
 # F:AUTOJOIN_NOTICE_VALUE:"*** Notice -- You are now being autojoined into \#nefarious"
 # F:BADCHAN_REASON:"This Channel Has Been Banned"
 # F:MOTD_LAST_CHANGED:FALSE
+# F:VERIFIED_ACCOUNTS:FALSE
+# F:UNVERIFIED:"You account is unverified, please verify it, reconnect and login again." 
 # F:QUOTES:TRUE
 # F:POLICY_NOTICE:TRUE
 # F:CRYPT_OPER_PASSWORD:TRUE
