@@ -243,6 +243,8 @@ enum Feature {
   FEAT_FLEXABLEKEYS,
   FEAT_NOTHROTTLE,
   FEAT_CREATE_CHAN_OPER_ONLY,
+  FEAT_VERIFIED_ACCOUNTS,
+  FEAT_UNVERIFIED,
 
   FEAT_LAST_F
 };
