@@ -450,6 +450,8 @@ static struct FeatureDesc {
   F_B(FLEXABLEKEYS, 0, 0, 0),
   F_B(NOTHROTTLE, 0, 0, 0),
   F_B(CREATE_CHAN_OPER_ONLY, 0, 0, 0),
+  F_B(VERIFIED_ACCOUNTS, 0, 0, 0),
+  F_S(UNVERIFIED, 0, "You account is unverified, please verify it, reconnect and login again.", 0),
 
 #undef F_S
 #undef F_B
