@@ -1,3 +1,10 @@
+2004-08-31  Isomer <isomer@undernet.org>
+	* ircd/m_account.c: Back out untested login-on-connect extensions,
+	we'll relook at these for .12
+
+2004-08-31  Isomer <isomer@undernet.org>
+	* ircd/parse.c: Don't rate limit /gline messages
+
 2004-08-26  Kevin L Mitchell  <klmitch@mit.edu>
 
 	* ircd/s_conf.c (lookup_confhost): if field 1 of a C-line contains
